# pycrux

./: .gitignore  LICENSE  Readme.md  pyproject.toml  setup.py
pycrux/: __init__.py  pandas_summarize.py  setup_ollama.py  spark_summarize.py  summarize.py
tests/: test_llm_utils.py  test_pandas_summarize.py  test_pandas_utils.py  test_spark_summarize.py  test_spark_utils.py  test_summarize.py
textsage/: __init__.py  llm_utils.py  pandas_summarize.py  pandas_utils.py  setup_ollama.py  spark_summarize.py  spark_utils.py  summarize.py
