[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrux"
version = "0.1.0"
authors = [{ name = "Shivang Agarwal", email = "shivangagarwal98@gmail.com" }]
description = "A simple library to set up Ollama and summarize text using local LLMs."
readme = "README.md"
dependencies = ["ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shivang98/pycrux"
Issues = "https://github.com/shivang98/pycrux/issues"

[tool.setuptools]
packages = ["pycrux"]

[project.optional-dependencies]
pandas = ["pandas"]
pyspark = ["pyspark"]
